Fix font loading avoid flickering

--- a/public/fonts/font-gilroy.css
+++ b/public/fonts/font-gilroy.css
@@ -136,7 +136,7 @@
 
 @font-face {
   font-family: 'Gilroy';
-  src: url('Radomir Tinkov - Gilroy-BlackItalicotf') format('opentype');
+  src: url('Radomir Tinkov - Gilroy-BlackItalic.otf') format('opentype');
   font-weight: 900;
   font-style: italic;
   font-display: swap;
